--- a/nilcc-agent/src/templates/haproxy.cfg.j2
+++ b/nilcc-agent/src/templates/haproxy.cfg.j2
@@ -39,10 +39,13 @@ frontend https_frontend
 
 # Backend servers
 {%- for backend in backends %}
+
+# VM {{ backend.id }} backend servers
 backend backend-http-{{ backend.id }}
-    mode tcp
+    mode http
     balance roundrobin
     server cvm {{ backend.http_address }} check
+
 backend backend-https-{{ backend.id }}
     mode tcp
     balance roundrobin
