fix: increase haproxy timeouts

--- a/nilcc-agent/src/templates/haproxy.cfg.j2
+++ b/nilcc-agent/src/templates/haproxy.cfg.j2
@@ -7,7 +7,7 @@ defaults
     mode tcp
     timeout connect {{ timeouts.connect }}ms
     timeout client {{ timeouts.client }}ms
-    timeout server {{ timeouts.server }}50000ms
+    timeout server {{ timeouts.server }}ms
     option tcplog
     log global
 
